Full migration to kyori adventure